--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>React Template</title>
+  <title>AEvent</title>
   <script src="https://kit.fontawesome.com/a5ff5a49b8.js" crossorigin="anonymous"></script>
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
 </head>
