--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,6 +7,7 @@
   <title>AEvent</title>
   <script src="https://kit.fontawesome.com/a5ff5a49b8.js" crossorigin="anonymous"></script>
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <meta name="image" property="og:image" content="https://aevent-project.s3.amazonaws.com/3-aevent-login.png"/>
 </head>
 
 <body>
