updated img url

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,17 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <script src="https://kit.fontawesome.com/a5ff5a49b8.js" crossorigin="anonymous"></script>
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
 
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>AEvent</title>
-  <script src="https://kit.fontawesome.com/a5ff5a49b8.js" crossorigin="anonymous"></script>
-  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-  <meta name="image" property="og:image" content="https://aevent-project.s3.amazonaws.com/3-aevent-login.png"/>
-</head>
-
-<body>
-  <div id="root"></div>
-</body>
+    <meta name="description" content="A pixel perfect Eventbrite clone that allows users to view events, register for tickets, and bookmark favorite events." />
+    <meta name="title" property="og:title" content="AEvent" />
+    <meta property="og:type" content="Website" />
+    <meta name="image" property="og:image" content="https://aevent-project.s3.amazonaws.com/3-aevent-login.png" />
+    <meta name="description" property="og:description" content="A pixel perfect Eventbrite clone that allows users to view events, register for tickets, and bookmark favorite events." />
+    <meta property='og:url' content='https://aevent-project.herokuapp.com/'/>
+    <meta name="author" content="Eunice Park" />
+    <title>AEvent</title>
+    
+  </head>
+  <body>
+    <div id="root"></div>
+  </body>
 
 </html>
